# prophesy

./: Cargo.toml  README.md  batteryreport..csv  batteryreport.csv  batteryreport.xml  build.rs
data/: resources.gresource.xml
data/resources/: main_window.ui  resources.gresource.xml
data/schemas/: com.prophesy.gschema.xml
data/styles/: application_window.css  colors.css  dashboard.css  globals.css  history.css  left-pane.css  prophesy.css  prophesy_application_window.css  right-pane.css
data/ui/: prophesy_about.ui  prophesy_application_pane.ui  prophesy_application_window.ui  prophesy_dashboard.ui  prophesy_history.ui  prophesy_left_pane.ui  prophesy_right_pane.ui  prophesy_suggestion.ui
src/: about.rs  application_pane.rs  application_window.rs  dashboard.rs  data.rs  graph.rs  history.rs  left_pane.rs  main.rs  main_window.rs  right_pane.rs  suggestion.rs  utils.rs
src/application_window/: imp.rs  mod.rs
src/load_historic_data/: mod.rs
src/utils/: battery_future_data.rs  battery_historic_data.rs  battery_realtime_data.rs  batteryreport.xml  load_historic_data.rs
