[package]
name = "prophesy"
description = "A Battery Monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"  # for pattern matching in file systems
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
starship-battery = "0.8.2"  # since this is used by terminal, it might get updated more often
                            # and have more bugfixes (maybe)

[build-dependencies]
glib-build-tools = "0.18.0"
