[package]
name = "prophesy"
description = "A Battery Monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"  # for pattern matching in file systems
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12", "v4_8", "v4_10"] }
once_cell = "1.18.0"
starship-battery = "0.8.2"  # since this is used by terminal, it might get updated more often
                            # and have more bugfixes (maybe)
uom = "0.35.0"

[target.'cfg(target_os = "windows")'.dependencies]
roxmltree = "0.19.0"  # xml parsing is required to parse the output of powercfg in windows

[build-dependencies]
glib-build-tools = "0.18.0"
